; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscFunctionImpl.c_count_load_data_info.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscFunctionImpl.c_count_load_data_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRIMARYKEY_TIMESTAMP_COL_INDEX = common dso_local global i64 0, align 8
@BLK_DATA_NO_NEEDED = common dso_local global i64 0, align 8
@BLK_DATA_FILEDS_NEEDED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @count_load_data_info(i32* %0, i32 %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i64 %3, i64* %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i64, i64* %10, align 8
  %13 = load i64, i64* @PRIMARYKEY_TIMESTAMP_COL_INDEX, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %5
  %16 = load i64, i64* @BLK_DATA_NO_NEEDED, align 8
  store i64 %16, i64* %6, align 8
  br label %19

17:                                               ; preds = %5
  %18 = load i64, i64* @BLK_DATA_FILEDS_NEEDED, align 8
  store i64 %18, i64* %6, align 8
  br label %19

19:                                               ; preds = %17, %15
  %20 = load i64, i64* %6, align 8
  ret i64 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
